# worldquant-harness

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  MCP_GUIDE.md  Makefile  NOTICE  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  pyproject.toml  restart.sh
configs/: wq_daily_mining.example.json
content/: mcp-tutorial.md  zhihu-ai-quant-debate.md
docs/: AGENT_HARNESS_CONTRACT.md  AGENT_ROLES.md  ALPHA_GPT_HARNESS.md  API_DOC.md  ARCHITECTURE.md  DEPLOYMENT.md  FACTOR_MINING.md  HARNESS_ARTIFACTS_AND_SCORE.md  LOCAL_WIND_WQ_WORKFLOW.md  MCP_GUIDE.md  OPEN_SOURCE_AUDIT.md  OPEN_SOURCE_RELEASE_CHECKLIST.md  PUBLIC_HARNESS_DEMO.md  QUICKSTART.md  SECURITY_AND_LIMITATIONS.md  VISUAL_GUIDE.md  WQ_ALPHA_RESEARCH_SKILL.md  WQ_ALPHA_SEARCH_MEMORY.md  WQ_LEGAL_INPUTS.md  WQ_REDUNDANCY_MODULE_AUDIT.md  WQ_WORKFLOW.md
engine/: Cargo.toml  pyproject.toml
example_factor/: 2-3.html  README.md  index.html
factor_research/: factor_deep_research_2026W13.md
frontend/: index.html  package-lock.json  package.json
quantgpt/: __main__.py  api_server.py  auth.py  community_context.py  community_triage.py  db.py  expression_parser.py  fundamental_data.py  mcp_server.py  mcp_task_helper.py  models.py  task_store.py  weekly_report.py  wq_active_weak_review.py  wq_agent_workflow.py  wq_alpha_detail.py  wq_alpha_ledger.py  wq_auto_mining.py  wq_brain_service.py  wq_community_client.py  wq_evolutionary_generator.py  wq_factor_map.py  wq_failure_memory.py  wq_forum_expression_expander.py  wq_forum_submission_optimizer.py  wq_iqc_tracker.py  wq_pnl_analysis.py  wq_policy_repair_planner.py  wq_research_harness.py  wq_research_miner.py  wq_research_sandbox.py  wq_review.py
scripts/: analyze_wq_pnl_curves.py  backfill_from_wq.py  backfill_wq_ledger.py  build_public_visual_pack.py  build_wq_community_skill_memory.py  build_wq_factor_map.py  build_wq_forum_expression_expansion.py  build_wq_forum_idea_memory.py  build_wq_history_ready_submit_candidates.py  build_wq_policy_repair_candidates.py  build_wq_submission_plan.py  check_worldquant_harness_status.ps1  check_wq_fields_status.ps1  check_wq_find_only_status.ps1  check_wq_generated_alphas.py  check_wq_loop_status.ps1  check_wq_smoke_status.ps1  check_wq_submissions.py  codex_direct_wq_submit_loop.py  discover_wq_fields.ps1  export_wq_community.py  factor_miner.py  generate_wq_focused_submit_candidates.py  generate_wq_gated_residual_candidates.py  generate_wq_submit10_candidates.py  generate_wq_submit5_more_anchor_orthogonal_candidates.py  generate_wq_submit5_more_anchor_residual_candidates.py  generate_wq_submit5_more_balance_repairs.py  generate_wq_submit5_more_bucket_micro_repairs.py  generate_wq_submit5_more_closevol_threshold_repairs.py  generate_wq_submit5_more_concentration_repair_candidates.py  generate_wq_submit5_more_coverage_backfill_repairs.py  generate_wq_submit5_more_e5_ivcombo_candidates.py  generate_wq_submit5_more_e5_nearpass_micro_candidates.py  generate_wq_submit5_more_e5_repair_candidates.py  generate_wq_submit5_more_existing_diverse_candidates.py  generate_wq_submit5_more_final_micro_sc_repairs.py  generate_wq_submit5_more_forum_map_candidates.py  generate_wq_submit5_more_hybrid_candidates.py  (+54 more)
tests/: conftest.py  test_alpha_tracker.py  (+76 more)
(+169 files in other folders)
