[project]
name = "quantgpt"
version = "2.5.0"
description = "QuantGPT — AI 驱动的量化策略回测平台"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "baostock>=0.8.8",
    "quantstats>=0.0.62",
    "mcp>=1.0",
    "uvicorn>=0.30",
    "fastapi>=0.110",
    "openai>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pyjwt>=2.8",
    "bcrypt>=4.0",
    "aiosmtplib>=3.0",
    "httpx>=0.27",
    "akshare>=1.10",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
postgresql = ["asyncpg>=0.29"]
jq = ["playwright>=1.40"]
dev = ["ruff>=0.4", "pyright>=1.1", "pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["quantgpt*"]
