[project]
name = "quantgpt"
version = "2.8.0"
description = "QuantGPT — AI 驱动的量化策略回测平台"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "baostock>=0.8.8",
    "quantstats>=0.0.62",
    "mcp>=1.0",
    "uvicorn>=0.30",
    "fastapi>=0.115",
    "openai>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pyjwt>=2.12",
    "bcrypt>=4.0",
    "aiosmtplib>=3.0",
    "httpx>=0.27",
    "akshare>=1.10",
    "apscheduler>=3.10",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
postgresql = ["asyncpg>=0.29"]
celery = ["celery[redis]>=5.3"]
community = ["playwright>=1.44"]
dev = ["ruff>=0.4", "pyright>=1.1", "pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "pip-audit>=2.7"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["quantgpt*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",    # line length (handled by formatter)
    "E402",    # module-level import not at top (lazy imports are intentional)
    "E741",    # ambiguous variable name (l in list comprehensions)
    "B008",    # Depends() in function defaults (FastAPI pattern)
    "B023",    # function-uses-loop-variable (pandas lambda pattern)
    "B904",    # raise-without-from (HTTP exceptions don't need chaining)
    "B905",    # zip-without-strict (not needed for same-length lists)
    "SIM102",  # collapsible-if (readability)
    "SIM103",  # needless-bool (readability)
    "SIM105",  # contextlib.suppress (explicit try-except is clearer)
    "SIM108",  # ternary instead of if-else (readability)
    "SIM201",  # negate-equal-op
    "UP007",   # X | Y union syntax (keep Optional for clarity)
    "UP035",   # deprecated-import (typing.List etc, not urgent)
]

[tool.ruff.lint.isort]
known-first-party = ["quantgpt"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingModuleSource = false

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.coverage.run]
source = ["quantgpt"]
omit = ["quantgpt/__main__.py"]

[tool.coverage.report]
fail_under = 25
show_missing = true
skip_empty = true
